{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 218,
  "lineage": "e19f034c-caef-ef20-3ab4-33932fc455f5",
  "resources": [
    {
      "module": "module.terraform-codes",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-internet-gateway",
      "provider": "module.terraform-codes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:956675039632:internet-gateway/igw-02502d86b0a385723",
            "id": "igw-02502d86b0a385723",
            "owner_id": "956675039632",
            "vpc_id": "vpc-052c5d994ce4cb744"
          },
          "dependencies": [
            "module.terraform-codes.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-codes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-route-table-pub-sub1",
      "provider": "module.terraform-codes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:956675039632:route-table/rtb-01b2ce64467210721",
            "id": "rtb-01b2ce64467210721",
            "owner_id": "956675039632",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02502d86b0a385723",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-route-table-pub-sub1"
            },
            "tags_all": {
              "Name": "test-route-table-pub-sub1"
            },
            "timeouts": null,
            "vpc_id": "vpc-052c5d994ce4cb744"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform-codes.aws_internet_gateway.test-internet-gateway",
            "module.terraform-codes.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-codes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-route-table-pub-sub3",
      "provider": "module.terraform-codes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:956675039632:route-table/rtb-0ebbc7bb788fa0d8e",
            "id": "rtb-0ebbc7bb788fa0d8e",
            "owner_id": "956675039632",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02502d86b0a385723",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-route-table-pub-sub3"
            },
            "tags_all": {
              "Name": "test-route-table-pub-sub3"
            },
            "timeouts": null,
            "vpc_id": "vpc-052c5d994ce4cb744"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform-codes.aws_internet_gateway.test-internet-gateway",
            "module.terraform-codes.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-codes",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-route-association-pub-sub1",
      "provider": "module.terraform-codes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0276546df738db727",
            "route_table_id": "rtb-01b2ce64467210721",
            "subnet_id": "subnet-04c828bf16cd17db1"
          },
          "dependencies": [
            "module.terraform-codes.aws_internet_gateway.test-internet-gateway",
            "module.terraform-codes.aws_route_table.test-route-table-pub-sub1",
            "module.terraform-codes.aws_subnet.test-public-subnet1",
            "module.terraform-codes.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-codes",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-route-association-pub-sub3",
      "provider": "module.terraform-codes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7d0d7ce3bdeb5f0",
            "route_table_id": "rtb-0ebbc7bb788fa0d8e",
            "subnet_id": "subnet-018991293bf362c6f"
          },
          "dependencies": [
            "module.terraform-codes.aws_internet_gateway.test-internet-gateway",
            "module.terraform-codes.aws_route_table.test-route-table-pub-sub3",
            "module.terraform-codes.aws_subnet.test-public-subnet3",
            "module.terraform-codes.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-codes",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-sg-eks-cluster",
      "provider": "module.terraform-codes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:956675039632:security-group/sg-0e744db39825c0a0e",
            "description": "security_group for test-eks-cluster",
            "egress": [],
            "id": "sg-0e744db39825c0a0e",
            "ingress": [],
            "name": "test-sg-eks-cluster",
            "name_prefix": "",
            "owner_id": "956675039632",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg-eks-cluster"
            },
            "tags_all": {
              "Name": "test-sg-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-052c5d994ce4cb744"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform-codes.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-codes",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-sg-eks-cluster-egress",
      "provider": "module.terraform-codes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "egress security_group_rule for test-eks-cluster",
            "from_port": 0,
            "id": "sgrule-2944694141",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e744db39825c0a0e",
            "security_group_rule_id": "sgr-0fa3b293ec3d33c2b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform-codes.aws_security_group.test-sg-eks-cluster",
            "module.terraform-codes.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-codes",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-sg-eks-cluster-ingress",
      "provider": "module.terraform-codes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ingress security_group_rule for test-eks-cluster",
            "from_port": 0,
            "id": "sgrule-2887363234",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e744db39825c0a0e",
            "security_group_rule_id": "sgr-05730465b1d66bd07",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform-codes.aws_security_group.test-sg-eks-cluster",
            "module.terraform-codes.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-codes",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-public-subnet1",
      "provider": "module.terraform-codes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:956675039632:subnet/subnet-04c828bf16cd17db1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c828bf16cd17db1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "956675039632",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-subnet1",
              "kubernetes.io/cluster/test-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "test-public-subnet1",
              "kubernetes.io/cluster/test-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-052c5d994ce4cb744"
          },
          "dependencies": [
            "module.terraform-codes.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-codes",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-public-subnet3",
      "provider": "module.terraform-codes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:956675039632:subnet/subnet-018991293bf362c6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018991293bf362c6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "956675039632",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-subnet3",
              "kubernetes.io/cluster/test-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "test-public-subnet3",
              "kubernetes.io/cluster/test-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-052c5d994ce4cb744"
          },
          "dependencies": [
            "module.terraform-codes.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-codes",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc",
      "provider": "module.terraform-codes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:956675039632:vpc/vpc-052c5d994ce4cb744",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0615ece5b10dc162a",
            "default_route_table_id": "rtb-0674aec75c83822c8",
            "default_security_group_id": "sg-0a88d06ee32e051bb",
            "dhcp_options_id": "dopt-0938f5c03436a3ca6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-052c5d994ce4cb744",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0674aec75c83822c8",
            "owner_id": "956675039632",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}